begin to add notebooks feature

--- a/note_frontend/src/index.html
+++ b/note_frontend/src/index.html
@@ -22,11 +22,17 @@
 </header>
 <div class="content">
     <aside class="side">
+        <h2>Notebooks
+            <button id="add-notebook-btn"><i class="fas fa-plus-square"></i></button>
+        </h2>
+        <ul class="notebook-list">
+        </ul>
+    </aside>
+    <aside class="side">
         <h2>Notes
             <button id="add-note-btn"><i class="fas fa-plus-square"></i></button>
         </h2>
         <ul class="note-list">
-
         </ul>
     </aside>
     <div class="main">
