improve styling of note items and their buttons

--- a/note_frontend/src/index.html
+++ b/note_frontend/src/index.html
@@ -48,15 +48,17 @@
 </header>
 <div class="content">
     <aside class="side" data-tab-id="0">
-        <h2>Notebooks
-            <button id="add-notebook-btn"><i class="fas fa-plus-square"></i></button>
+        <h2 class="list-heading">
+            Notebooks
+            <button id="add-notebook-btn" class="add-new-btn"><i class="fas fa-plus-square"></i></button>
         </h2>
         <ul class="notebook-list">
         </ul>
     </aside>
     <aside class="side" data-tab-id="1">
-        <h2>Notes
-            <button id="add-note-btn"><i class="fas fa-plus-square"></i></button>
+        <h2 class="list-heading">
+            Notes
+            <button id="add-note-btn" class="add-new-btn"><i class="fas fa-plus-square"></i></button>
         </h2>
         <ul class="note-list">
         </ul>
